--- a/manage/gig_schedule/index.html
+++ b/manage/gig_schedule/index.html
@@ -1,18 +1,56 @@
 <?php
-    /*なんかよくわかりません，使うのかどうかとか
     require('../../common/php/base.php');
 
-    $table = '<tr><th></th>';
+    $doingGig = NULL;
 
-    for($i = 0; $i < 7; $i++) {
-        $table .= '<th class="'.$Enweek[$i].'">'.$week[$i].'</th>';
-    }
-    $table .= '</tr>';
+    $localdsn = 'mysql:dbname=reservation;host=localhost;charset=utf8';
+    $localuser = 'root';
+    $localpass = '';
 
-    for($i = 0; $i < count($time); $i++){
-        $table .= '<tr><th class="'. $row_style[$i % 2] . ' table_time">' .$time[$i].'</th>';
-        for($j = 0; $j < 7; $j++){
-            $table .= '<td></td>';
+    try{
+        $dbh = new PDO($localdsn, $localuser, $localpass);
+        $res = $dbh->query("SELECT * FROM gig_booking");
+        $date = $res->fetchAll();
+        $count = $res->rowCount();
+
+        for($i=0; $i < $count; $i++){
+            $doingGig .= <<<_HTML_
+                <div class="gig_select">
+                    <a href="./page.index.html?id={$date[$i]['id']}">
+                        <div class="gig_select_Main">
+                            <span class="gig_title">
+                                {$date[$i]['title']}
+                            </span>
+                            <span class="material-symbols-outlined navi">navigate_next</span>
+                            <br>
+                            <span class="gig_deadline">
+                                {$date[$i]['deadline']}まで
+                            </span>
+                        </div>
+                    </a>
+                </div>
+            _HTML_;
         }
     }
+    catch(PDOException $e){
+        print 'エラー' .PHP_EOL. $e->getMessage();
+    }
 ?>
+<!doctype HTML>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <link href="../common/css/base.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <script src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
+</head>
+<body>
+<header>
+</header>
+<main>
+    <?php echo $doingGig; ?>
+    <div id="newcreate">
+    </div>
+</main>
+</body>
+</html>
