--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 </h2>
     <?php echo $pre_week_tag, $next_week_tag; ?>
     <table id="cale" border="1">
-        <?php echo $table; ?>
+        <?php echo $table; 
+        echo var_dump($date);
+        ?>
     </table>
 
     <a href="./manage/index.html">あ，こっちでーす</a>
