--- a/manage/gig_schedule/index.html
+++ b/manage/gig_schedule/index.html
@@ -3,10 +3,6 @@
 
     $doingGig = NULL;
 
-    $localdsn = 'mysql:dbname=reservation;host=localhost;charset=utf8';
-    $localuser = 'root';
-    $localpass = '';
-
     try{
         $dbh = new PDO($localdsn, $localuser, $localpass);
         $res = $dbh->query("SELECT * FROM gig_booking");
@@ -16,7 +12,7 @@
         for($i=0; $i < $count; $i++){
             $doingGig .= <<<_HTML_
                 <div class="gig_select">
-                    <a href="./page.index.html?id={$date[$i]['id']}">
+                    <a href="./page/index.html?id={$date[$i]['id']}">
                         <div class="gig_select_Main">
                             <span class="gig_title">
                                 {$date[$i]['title']}
