--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
 </h2>
     <?php echo $pre_week_tag, $next_week_tag; ?>
     <table id="cale" border="1">
-        <?php echo $table; 
-        echo var_dump($date);
-        ?>
+        <?php echo $table; ?>
     </table>
 
     <a href="./manage/index.html">あ，こっちでーす</a>
