--- a/confirm/index.html
+++ b/confirm/index.html
@@ -54,8 +54,8 @@
                         </tr>
                         <tr>
                             <td></td>
-                            <td>予約を修正</td>
-                            <td>予約を削除</td>
+                            <td><a>予約を修正</a></td>
+                            <td><a>予約を削除</a></td>
                         </tr>
                     </table>
                 </div>
