--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <title></title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link href="./common/css/base.css" rel="stylesheet">
@@ -32,7 +33,7 @@
     ?>
 </h2>
     <?php echo $pre_week_tag, $next_week_tag; ?>
-    <table id="cale" border="1">
+    <table class="calender">
         <?php echo $table; ?>
     </table>
 
