--- a/index.html
+++ b/index.html
@@ -5,36 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=yes">
     <title></title>
-    <script src="./common/js/menu.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="./common/css/base.css">
-    <link rel="stylesheet" href="./common/css/menu.css">
 </head>
 <body>
 <header>
-    <h1 class="head">信州大学軽音楽部</h1>
-    <div id="navArea">
-        <nav>
-            <div class="inner">
-                <ul>
-                    <li class="option">
-                    </li>
-                </ul>
-            </div>
-        </nav>
-        <div class="toggle-btn-circle">
-            <div class="toggle_btn">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-        </div>
-        <div class="mask"></div>
-    </div>
+    <?php require('./common/php/header.php'); ?>
 </header>
 <main id="scheduleMain">
     <div class="week_select">
-        <button type="button" onclick="location.href='./index.html'">今週</button>
+        <button class="toweekButton" type="button" onclick="location.href='./index.html'">今週</button>
         <?php echo $pre_week_tag, $weekterm, $next_week_tag; ?>
     </div>
     <table class="calender">
