--- a/gig_booking/form/index.html
+++ b/gig_booking/form/index.html
@@ -1,28 +1,28 @@
-<?php require('./index.php'); ?>
+<?php require('index.php'); ?>
 <!doctype html>
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <link href="https://unpkg.com/multiple-select@1.5.2/dist/multiple-select.min.css" rel="stylesheet">
-    <link href="../common/css/base.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
     <script src="https://unpkg.com/multiple-select@1.5.2/dist/multiple-select.min.js"></script>
+    <link href="https://unpkg.com/multiple-select@1.5.2/dist/multiple-select.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../../common/css/base.css">
 </head>
 <body>
 <header>
-    <?php require('../common/php/header.php'); ?>
+    <?php require('../../common/php/header.php'); ?>
 </header>
 <main id="bookingMain">
     <?php
         if($page_flag == 1){
-            confirm();
+            koma_confirm();
         }
         elseif($page_flag == 2){
-            complete();
+            koma_complete();
         }
         else{
-            booking();
+            koma_booking();
         }
     ?>
 
