--- a/gig_booking/index.html
+++ b/gig_booking/index.html
@@ -1,31 +1,61 @@
-<?php require('index.php'); ?>
-<!doctype html>
+<?php
+    require('../common/php/base.php');
+
+    $today = new DateTime();
+
+    $doingGig = NULL;
+
+    try{
+        $dbh = new PDO($dsn, $user, $pass);
+        $res = $dbh->query("SELECT * FROM gig_booking");
+        $date = $res->fetchAll();
+        $count = $res->rowCount();
+
+        for($i=0; $i < $count; $i++){
+            if($today->format('Y-m-d') <= $date[$i]['deadline']){
+                $formURL = 'href="./form/index.html?id='.$date[$i]['id'].'"';
+            }
+            else{
+                $formURL = NULL;
+            }
+            $doingGig .= <<<_HTML_
+                <div class="gig_select">
+                    <a $formURL>
+                        <div class="gig_select_Main">
+                            <span class="gig_title">
+                                {$date[$i]['title']}
+                            </span>
+                            <span class="material-symbols-outlined navi">navigate_next</span>
+                            <br>
+                            <span class="gig_deadline">
+                                {$date[$i]['deadline']}まで
+                            </span>
+                        </div>
+                    </a>
+                </div>
+            _HTML_;
+        }
+    }
+    catch(PDOException $e){
+        print 'エラー' .PHP_EOL. $e->getMessage();
+    }
+?>
+<!doctype HTML>
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <link href="../common/css/base.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
-    <script src="https://unpkg.com/multiple-select@1.5.2/dist/multiple-select.min.js"></script>
-    <link href="https://unpkg.com/multiple-select@1.5.2/dist/multiple-select.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../common/css/base.css">
 </head>
 <body>
 <header>
     <?php require('../common/php/header.php'); ?>
 </header>
-<main id="bookingMain">
-    <?php
-        if($page_flag == 1){
-            koma_confirm();
-        }
-        elseif($page_flag == 2){
-            koma_complete();
-        }
-        else{
-            koma_booking();
-        }
-    ?>
-
+<main>
+    <?php echo $doingGig; ?>
+    <div id="newcreate">
+    </div>
 </main>
 </body>
 </html>
