--- a/manage/index.html
+++ b/manage/index.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="../common/css/base.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
-<a href="./gig_schedule/index.html">あ，こっちでーす</a>
+<header>
+    <?php require('../common/php/header.php'); ?>
+</header>
+<main>
+    
+    <a href="./gig_schedule/index.html">あ，こっちでーす</a>
+</main>
 </body>
 </html>
