--- a/manage/gig_schedule/index.html
+++ b/manage/gig_schedule/index.html
@@ -36,16 +36,18 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <link href="../common/css/base.css" rel="stylesheet">
+    <link href="../../common/css/base.css" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="https://cdn.jsdelivr.net/npm/jquery/dist/jquery.min.js"></script>
 </head>
 <body>
 <header>
+    <?php require('../../common/php/header.php'); ?>
 </header>
 <main>
     <?php echo $doingGig; ?>
     <div id="newcreate">
+        <a href="./newform/index.html">新規作成</a>
     </div>
 </main>
 </body>
