--- a/booking/confirm/index.html
+++ b/booking/confirm/index.html
@@ -54,8 +54,7 @@
                         </tr>
                         <tr>
                             <td></td>
-                            <td><a href="../fix/index.html?id={$date[$i]['booking_id']}">予約を修正</a></td>
-                            <td><a href="../delete/index.html?id={$date[$i]['booking_id']}">予約を削除</a></td>
+                            <td><a href="../fix/index.html?id={$date[$i]['booking_id']}">予約の修正、削除</a></td>
                         </tr>
                     </table>
                 </div>
