--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=yes">
     <title></title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined">
     <link rel="stylesheet" href="./common/css/base.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
 <main id="scheduleMain">
     <div class="week_select">
         <button class="toweekButton" type="button" onclick="location.href='./index.html'">今週</button>
-        <?php echo $pre_week_tag, $weekterm, $next_week_tag; ?>
+        <?php echo $pre_week_tag, $next_week_tag; ?>
     </div>
     <table class="calender">
         <?php echo $table; ?>
