--- a/test.html
+++ b/test.html
@@ -10,19 +10,9 @@
 </head>
 <body>
 <header>
-    <?php require('./common/php/header.php'); ?>
 </header>
 <main id="scheduleMain">
-    <div class="week_select">
-        <button class="toweekButton" type="button" onclick="location.href='./index.html'">今週</button>
-        <?php echo $pre_week_tag, $next_week_tag; ?>
-    </div>
-    <table class="calender">
-        <?php echo $table; ?>
-    </table>
-
-    <a href="./manage/index.html">あ，こっちでーす</a>
-    <a href="./gig_booking/index.html">こっち２(ツー)</a>
+aaa
 </main>
 </body>
 </html>
